Fixed hamburger button text wrapping Added responsive @media settings to the title Added new responsive about section with flexbox layout Added new responsive projects section with flexbox layout Added new animated big buttons for project section

--- a/styles.css
+++ b/styles.css
@@ -8,20 +8,41 @@ html, body {
 	font-kerning: auto;
 	background-color: #000E17;
 	color: #DDDDDD;
-	hyphens: auto;
+	hyphens: none;
 }
 
 a {
 	text-decoration-color: #DDDDDD;
 	color: #DDDDDD;
 	font-weight: 300;
-	hyphens: auto;
+	hyphens: none;
+	font-size: 12pt;
+}
+
+h1 {
+	font-size: 28pt;
+	font-weight: 500;
+	text-align: left;
+	font-variant: small-caps;
 }
 
 h2 {
 	font-size: 20pt;
-	font-weight: 300;
-	hyphens: auto;
+	font-weight: 500;
+	hyphens: none;
+	text-align: left;
+}
+
+h3 {
+	font-size: 16pt;
+	font-weight: 400;
+	hyphens: none;
+	text-align: left;
+}
+
+footer {
+	text-align: right;
+	padding-bottom: 20px;
 }
 
 .style-title {
@@ -52,7 +73,20 @@ h2 {
 	margin-left: auto;
 	background-color: #000E17;
 	text-align: justify;
-	max-width: 1000px;
+	max-width: 1200px;
+	padding: 1px 5vw 1px 5vw;
+}
+
+@media (max-width: 600px) {
+	.style-main {
+		padding-top: 1px;
+		padding-bottom: 1px;
+		margin-right: auto;
+		margin-left: auto;
+		background-color: #000E17;
+		text-align: left;
+		padding: 1px 5vw 1px 5vw;
+	}
 }
 
 .style-header {
@@ -61,11 +95,12 @@ h2 {
 	border-bottom: medium solid #00A0FF;
 	background-color: #001E31;
 	height: 99vh;
+	display: block;
+	vertical-align: middle;
 	background-image: -webkit-linear-gradient(45deg,rgba(0,45,73,1.00) 0%,rgba(0,18,29,1.00) 99.48%);
 	background-image: -moz-linear-gradient(45deg,rgba(0,45,73,1.00) 0%,rgba(0,18,29,1.00) 99.48%);
 	background-image: -o-linear-gradient(45deg,rgba(0,45,73,1.00) 0%,rgba(0,18,29,1.00) 99.48%);
 	background-image: linear-gradient(45deg,rgba(0,45,73,1.00) 0%,rgba(0,18,29,1.00) 99.48%);
-	position: relative;
 }
 
 .style-socialImg {
@@ -134,25 +169,115 @@ h2 {
 }
 
 .style-jumbotron:after {
-  content: '';
-  width: 4px;
-  height: 30pt;
-  background: #00A2FD;
-  opacity: 0;
-  display: inline-block;
-  animation: blink 0.5s 2.5s infinite alternate;
-  animation-timing-function: step-start;
+	content: ''; 
+	width: 5px;
+	height: 36pt;
+	background: #00A2FD;
+	opacity: 0;
+	display: inline-block;
+	animation: blink 0.5s 2.5s infinite alternate;
+	animation-timing-function: step-start;
 }
 
-.style-img-right {
+@media (max-width: 600px) {
+	.style-jumbotron {
+		font-size: 6vw;
+	}
+
+	.style-jumbotron:after {
+	  	width: 0.6vw;
+	  	height: 6vw;
+	}
+}
+
+.style-img-blur {
 	background-image: url('images/Filtery Pic.jpg');
 	background-size: contain;
-	width: 150px;
-	height: 150px;
+	width: 300px;
+	height: 300px;
 	display: block;
     margin-left: auto;
     margin-right: 1%;
 	box-shadow: 0 0 12px 12px #000E17 inset;
+}
+
+.style-image {
+	align-self:center; 
+	margin: auto;
+	margin-left: 5vw;
+	width: 15vw;
+}
+
+.style-fullpage {
+	padding: 5vh 0px 15vh 0px;
+	max-height: 600px;
+	min-height: 300px;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
+
+.style-fullpage aside {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	max-width: 60vw;
+}
+
+.style-fullpage-button {
+	max-height: 600px;
+	min-height: 300px;
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.style-bigbutton {
+	height: 15vh;
+	min-height: 150px;
+	flex-basis: 188px;
+	flex-grow: 1;
+	background-color: #DDDDDD;
+	color: #28292A;
+	padding: 3vh 3vw;
+	margin: 20px;
+	font-size: 24pt;
+	font-weight: 500;
+	text-decoration: none;
+	text-align: center;
+	font-family: "Lucida Console", Monaco, monospace;	
+	line-height: 130px;
+	background-size: 110%;
+	background-position: center;
+	background-repeat: no-repeat;
+	overflow: hidden;
+	transition: all 0.2s ease;
+}
+
+.style-bigbutton:hover {
+	transform: scale(0.97);
+}
+
+@media (max-width: 600px) {
+	.style-bigbutton {
+		margin: 5px;
+	}
+	.style-fullpage {
+		padding: 5vh 0px 15vh 0px;
+		max-height: 600px;
+		min-height: 300px;
+		display: contents;
+	}
+	.style-fullpage aside {
+		justify-content: center;
+		max-width: 100vw;
+	}
+	.style-image {
+		align-self:center; 
+		display: block;
+		margin: auto;
+		margin-top: 20px;
+		width: 40vw;
+	}
 }
 
 @keyframes blink {
@@ -190,6 +315,7 @@ h2 {
     font-size: 25px;
     color: #B0B0B0;
     display: block;
+	white-space: nowrap;
     transition: 0.3s;
 }
 
@@ -212,9 +338,3 @@ h2 {
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
 } 
-
-@media (min-width: 0px) and (max-width: 400px){
-}
-
-@media (min-width: 401px) and (max-width: 768px){
-}
